<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C57F7A"
    android:contentDescription="@string/background"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="63dp"
        android:layout_height="66dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/nama"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/download__1__removebg_preview" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="345dp"
        android:layout_height="62dp"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/masukkan_nama"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:shadowColor="#FFFFFF"
        android:textColor="#7C6F6F"
        android:textColorHighlight="#683232"
        android:textColorLink="#C4B9AC"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editTextNim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNo"
        android:layout_width="345dp"
        android:layout_height="62dp"
        android:layout_marginBottom="128dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/masukkan_no"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:shadowColor="#FFFFFF"
        android:textColor="#7C6F6F"
        android:textColorHighlight="#683232"
        android:textColorLink="#C4B9AC"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/editTextNim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextNim"
        android:layout_width="348dp"
        android:layout_height="63dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/masukkan_nim"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:textColor="#7C6F6F"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextJur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextJur"
        android:layout_width="352dp"
        android:layout_height="64dp"
        android:layout_marginTop="424dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/masukkan_jurusan"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:textColor="#7C6F6F"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#D9C7B5"
        android:gravity="center"
        android:text="@string/simpan"
        android:textSize="18sp"
        app:backgroundTint="#D9C7B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextJur"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#D9C7B5"
        android:gravity="center"
        android:text="@string/delete"
        android:textSize="18sp"
        app:backgroundTint="#D9C7B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#D9C7B5"
        android:gravity="center"
        android:text="@string/update"
        android:textSize="18sp"
        app:backgroundTint="#D9C7B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="#D9C7B5"
        android:backgroundTint="#D9C7B5"
        android:gravity="center"
        android:text="@string/view_all"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn"
        app:layout_constraintEnd_toStartOf="@+id/btn"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextJur"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="305dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/informasi_mahasiswa"
        android:textSize="28sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textColor="#DABEA9"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textColor="#DABEA9"
        android:textColorHint="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textColor="#DABEA9"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/jurusan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jurusan"
        android:textColor="#DABEA9"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextJur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNim"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>